--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -582,3 +582,19 @@ doi={10.2147/RRNM.S46526},
 url={https://doi.org/10.2147/RRNM.S46526}
 }
 
+@Article{HPB04,
+shorthand = {HPB04},
+shortauthor={HPB},
+author={HP, Raich and Bl{\"u}mler, Peter},
+title={Design and construction of a dipolar Halbach array with a homogeneous field from identical bar magnets: NMR Mandhalas},
+journal={Concepts in Magnetic Resonance Part B-Magnetic Resonance Engineering},
+year={2004},
+month={Oct},
+day={01},
+volume={23B},
+pages={16-25},
+abstract={Magnets of the Halbach layout are interesting for the use in mobile NMR/ MRI devices. Therefore, the ideal Halbach magnet was iterated using identical bar magnets, which are positioned and oriented based on analytical equations. These configurations were simulated with two-dimensional finite-element methods. Performance factors were defined to relate field strength with homogeneity and mass. A geometry of 16 magnets provided a good compromise between performance and special requirements for the desired use to store hyperpolarized xenon. The construction of such a magnet required the design of dedicated support frames and procedures to mount them. The field strength and homogeneity in the finished magnet were measured by a Hall probe and agreed well with the simulations. The calculation and construction are described in detail and together with the tabled field values for n magnets with n less than or equal to 80 may prove helpful for building similar devices, which were named NMR Mandhalas (Magnet Arrangements for Novel Discrete Halbach Layout). (C) 2004 Wiley Periodicals, Inc.},
+doi={10.1002/cmr.b.20018},
+url={https://doi.org/10.1002/cmr.b.20018}
+}
+
