--- a/documentation/thesis/thesis_references_alias.tex
+++ b/documentation/thesis/thesis_references_alias.tex
@@ -1,80 +1,83 @@
+\defcitealias{BC16}{BC16}
+
+
+\defcitealias{J21}{J21}
+
+
+\defcitealias{NK16}{NK16}
+
+
+\defcitealias{OTW21}{OTW21}
+
+
+\defcitealias{OB20}{OB20}
+
+
+\defcitealias{GKT16}{GKT16}
+
+
+\defcitealias{AFL23}{AFL23}
+
+
+\defcitealias{CP16}{CP16}
+
+
+\defcitealias{HH21}{HH21}
+
+
+\defcitealias{P17}{P17}
+
+
 \defcitealias{MMN19}{MMN19}
 
 
 \defcitealias{BPA22}{BPA22}
 
 
-\defcitealias{OTW19}{OTW19}
-
-
-\defcitealias{O24}{O24}
-
-
-\defcitealias{GKT16}{GKT16}
-
-
-\defcitealias{WSB19}{WSB19}
-
-
-\defcitealias{BC16}{BC16}
-
-
-\defcitealias{NK16}{NK16}
-
-
-\defcitealias{WAH21}{WAH21}
-
-
-\defcitealias{DRW23}{DRW23}
-
-
-\defcitealias{HH21}{HH21}
-
-
-\defcitealias{W14}{W14}
-
-
-\defcitealias{MWO24}{MWO24}
+\defcitealias{G17}{G17}
 
 
 \defcitealias{BJJ16}{BJJ16}
 
 
+\defcitealias{CSG22}{CSG22}
+
+
 \defcitealias{DBN08}{DBN08}
 
 
-\defcitealias{H80}{H80}
+\defcitealias{WAH21}{WAH21}
 
 
-\defcitealias{SB10}{SB10}
-
-
-\defcitealias{P17}{P17}
-
-
-\defcitealias{WZC21}{WZC21}
-
-
-\defcitealias{AFL23}{AFL23}
-
-
-\defcitealias{G17}{G17}
+\defcitealias{OTW19}{OTW19}
 
 
 \defcitealias{HMW20}{HMW20}
 
 
-\defcitealias{OB20}{OB20}
+\defcitealias{H80}{H80}
 
 
-\defcitealias{CP16}{CP16}
+\defcitealias{DRW23}{DRW23}
 
 
-\defcitealias{CSG22}{CSG22}
+\defcitealias{W14}{W14}
 
 
-\defcitealias{J21}{J21}
+\defcitealias{WSB19}{WSB19}
 
 
-\defcitealias{OTW21}{OTW21}
+\defcitealias{HPB04}{HPB04}
+
+
+\defcitealias{WZC21}{WZC21}
+
+
+\defcitealias{MWO24}{MWO24}
+
+
+\defcitealias{SB10}{SB10}
+
+
+\defcitealias{O24}{O24}
 
